[package]
name = "derive-quote-to-tokens"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-helpers = "0.4.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
proc-macro2 = { version = "1.0.67", default-features = false }
quote = { version = "1.0.33", default-features = false }
syn = { version = "1", features = ["extra-traits"] }
